
18 Oct 2007, PHP 5.2.5RC1
- Upgraded PCRE to version 7.3 (Nuno)
- Added optional parameter $provide_object to debug_backtrace(). (Sebastian)
- Added alpha support for imagefilter() IMG_FILTER_COLORIZE. (Pierre)

- Improved speed of array_intersect_key(), array_intersect_assoc(),
  array_uintersect_assoc(), array_diff_key(), array_diff_assoc() and
  array_udiff_assoc(). (Dmitry)

- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)
- Fixed regression in glob() when enforcing safe_mode/open_basedir checks on
  paths containing '*'. (Ilia)
- Fixed "mail.force_extra_parameters" php.ini directive not to be modifiable
  in .htaccess due to the security implications - reported by SecurityReason.
  (Stas)
- Fixed PDO crash when driver returns empty LOB stream. (Stas)
- Fixed dl() to only accept filenames - reported by Laurent Gaffie. (Stas)
- Fixed dl() to limit argument size to MAXPATHLEN (CVE-2007-4887).
  (Christian Hoffmann)
- Fixed iconv_*() functions to limit argument sizes as workaround to libc 
  bug (CVE-2007-4783, CVE-2007-4840). (Christian Hoffmann, Stas)
- Fixed missing brackets leading to build warning and error in the log.
  Win32 code). (Andrey)
- Fixed leaks with multiple connects on one mysqli object. (Andrey)
- Fixed endianness detection on MacOS when building universal binary. 
  (Uwe Schindler, Christian Speich, Tony)
- Fixed possible triggering of buffer overflows inside glibc
  implementations of the fnmatch(), setlocale() and glob() functions. 
  Reported by Laurent gaffie. (Ilia)
- Fixed imagerectangle regression with 1x1 rectangle (libgd #106). (Pierre)
- Fixed htmlentities/htmlspecialchars not to accept partial multibyte
  sequences. (Stas)

- Fixed bug #43020 (Warning message is missing with shuffle() and more
  than one argument). (Scott)
- Fixed bug #42917 (PDO::FETCH_KEY_PAIR doesn't work with setFetchMode).
  (Ilia)
- Fixed bug #42890 (Constant "LIST" defined by mysqlclient and c-client).
  (Andrey)